ros2_ws/log/build_2025-12-21_18-13-51/camera_driver/stderr.log
  File "/home/dz/Desktop/uni/SEM 7/TOOLS&SOFTWARE/ros2_project/ros2_ws/install/camera_driver/lib/python3.12/site-packages/camera_driver/camera_node.py", line 30
    self.test_traj = {],
                      ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '{'

